echo-example/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: my-test-app
  namespace: default
spec:
  rules:
    - host: test.platyplus.io
      http:
        paths:
          - backend:
              serviceName: echoserver
              servicePort: 8080
            path: /
  tls:
    - hosts:
        - test.platyplus.io
      secretName: my-test-app-crt
